--- a/FingerFantasy/res/layout/activity_main.xml
+++ b/FingerFantasy/res/layout/activity_main.xml
@@ -1,12 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <TextView
+    <ImageView
+        android:id="@+id/logoImage"
+        android:layout_width="fill_parent"
+        android:layout_height="500px"
+        android:src="@drawable/ic_launcher"
+        android:text="FingerFantasy" />
+
+    <Button
+        android:id="@+id/startBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/FingerFantasy" />
+        android:layout_below="@+id/logoImage"
+        android:layout_centerHorizontal="true"
+        android:text="Start" />
 
 </RelativeLayout>
