--- a/FingerFantasy/res/layout/activity_battle.xml
+++ b/FingerFantasy/res/layout/activity_battle.xml
@@ -2,8 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/volcano"
     tools:context="com.chokobo.fingerfantasy.BattleActivity" >
 
+        <ImageView
+        android:id="@+id/enemy_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+         />
+    
     <com.chokobo.fingerfantasy.customviews.TestView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
