--- a/FingerFantasy/res/layout/activity_battle.xml
+++ b/FingerFantasy/res/layout/activity_battle.xml
@@ -1,53 +1,53 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/battle_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/volcano"
     tools:context="com.chokobo.fingerfantasy.BattleActivity" >
 
-        <ImageView
+    <ImageView
         android:id="@+id/enemy_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-         />
-    
-    <com.chokobo.fingerfantasy.customviews.TestView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_centerVertical="true" />
 
-    <ImageView 
-        android:id="@+id/player_level"
-        android:src="@drawable/ic_launcher"
-        android:layout_height="50dp"
-        android:layout_width="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        />
-    
+    <ProgressBar
+        android:id="@+id/enemy_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/player_bar" />
+
     <ProgressBar
         android:id="@+id/player_bar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="240dp"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"
-        android:layout_toRightOf="@id/player_level"
         android:indeterminate="false"
-        android:progressDrawable="@drawable/player_bar" 
-        />
-    
-    <ProgressBar 
-        android:id="@+id/enemy_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-		android:layout_width="290dp"
-		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:layout_marginLeft="20dp"
-		android:layout_marginBottom="15dp"
-		android:indeterminate="false"
-		android:progressDrawable="@drawable/player_bar"
-        />
+        android:progressDrawable="@drawable/player_bar" />
+
+    <com.chokobo.fingerfantasy.customviews.TestView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
+
+    <ImageView
+        android:id="@+id/enemy_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/player_bar"
+        android:layout_marginRight="42dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/dragon_name" />
 
 </RelativeLayout>
