--- a/FingerFantasy/res/layout/activity_battle.xml
+++ b/FingerFantasy/res/layout/activity_battle.xml
@@ -45,9 +45,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/player_bar"
-        android:layout_marginRight="42dp"
+        android:layout_alignRight="@id/player_bar"
         android:adjustViewBounds="true"
         android:src="@drawable/dragon_name" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/player_bar"
+        android:src="@drawable/lv" />
+
+    <TextView
+        android:id="@+id/lv_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="47dp"
+        android:paddingLeft="120dp"
+        android:text="1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000" />
+
+    <VideoView
+        android:id="@+id/video"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
