--- a/FingerFantasy/res/layout/activity_main.xml
+++ b/FingerFantasy/res/layout/activity_main.xml
@@ -2,21 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/start_screen2"
+    >
 
-    <ImageView
-        android:id="@+id/logoImage"
-        android:layout_width="fill_parent"
-        android:layout_height="500px"
-        android:src="@drawable/ic_launcher"
-        android:text="FingerFantasy" />
-
-    <Button
+    <ImageButton
         android:id="@+id/startBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logoImage"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Start" />
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/start_button" />
 
 </RelativeLayout>
