--- a/FingerFantasy/res/layout/activity_reesult.xml
+++ b/FingerFantasy/res/layout/activity_reesult.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/result_screen"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,17 +10,62 @@
     tools:context="com.chokobo.fingerfantasy.ReesultActivity" >
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Result画面" />
 
-    <Button
-        android:id="@+id/resultBtn"
+        <TextView
+        android:id="@+id/level_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="55dp"
-        android:text= "戻る" />
+        android:layout_alignParentLeft="true"
+        android:paddingBottom="279dp"
+        android:paddingLeft="120dp"
+        android:paddingStart="25dp"
+		android:paddingRight="0dp"
+		android:paddingEnd="0dp"
+        android:text="1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000" />
+    
+        <TextView
+        android:id="@+id/getExp_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:paddingBottom="173dp"
+        android:paddingLeft="150dp"
+        android:paddingStart="25dp"
+		android:paddingRight="0dp"
+		android:paddingEnd="0dp"
+        android:text="1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000" />
+        
+        <TextView
+        android:id="@+id/nextExp_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:paddingBottom="91dp"
+        android:paddingLeft="150dp"
+        android:paddingStart="25dp"
+		android:paddingRight="0dp"
+		android:paddingEnd="0dp"
+        android:text="1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/resultBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/getExp_text"
+            android:layout_centerHorizontal="true"
+            android:text="戻る" />
 
 </RelativeLayout>
