--- a/FingerFantasy/res/layout/activity_battle.xml
+++ b/FingerFantasy/res/layout/activity_battle.xml
@@ -66,10 +66,22 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#000000" />
 
-    <VideoView
-        android:id="@+id/video"
+    <ImageView
+        android:layout_width="107dp"
+        android:layout_height="101dp"
+        android:layout_above="@id/lv_text"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/remain_turn" />
+
+    <TextView
+        android:id="@+id/turn_text"
         android:layout_width="wrap_content"
-        android:visibility="gone"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_above="@id/lv_text"
+        android:layout_alignParentRight="true"
+        android:paddingRight="60dp"
+        android:textSize="50dp"
+        android:paddingBottom="20dp"
+        android:text="1" />
 
 </RelativeLayout>
