--- a/FingerFantasy/res/layout/activity_battle.xml
+++ b/FingerFantasy/res/layout/activity_battle.xml
@@ -91,6 +91,8 @@
         android:layout_alignParentRight="true"
         android:paddingBottom="20dp"
         android:paddingRight="60dp"
+        android:paddingStart="25dp"
+        android:paddingLeft="0dp"
         android:text="1"
         android:textSize="50dp" />
 
