--- a/FingerFantasy/res/layout/activity_main.xml
+++ b/FingerFantasy/res/layout/activity_main.xml
@@ -2,10 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" 
     android:background="@drawable/start_screen2"
-    >
-
+    android:orientation="vertical" >
+    
     <ImageButton
         android:id="@+id/startBtn"
         android:layout_width="wrap_content"
@@ -14,5 +13,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:background="@drawable/start_button" />
+
+    <ImageView
+        android:layout_width="220dp"
+        android:layout_height="170dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:alpha="0.87"
+        android:src="@drawable/logo" />
 
 </RelativeLayout>
